cmake_minimum_required(VERSION 3.16)
project(C_Clion C)

set(CMAKE_C_STANDARD 99)

#C_demo1
#add_executable(C_Clion C_demo1/C_Test01.c)
#add_executable(C_Clion C_demo1/C_Test02.c)
#add_executable(C_Clion C_demo1/C_Test03.c)
#add_executable(C_Clion C_demo1/C_Test04.c)
#add_executable(C_Clion C_demo1/C_Test05.c)
#add_executable(C_Clion C_demo1/C_Test06.c)
#add_executable(C_Clion C_demo1/C_Test07.c)
#add_executable(C_Clion C_demo1/C_Test08.c)
#add_executable(C_Clion C_demo1/C_Test09.c)
#add_executable(C_Clion C_demo1/C_Test10.c)
#add_executable(C_Clion C_demo1/C_Test11.c)
#add_executable(C_Clion C_demo1/C_Test12.c)
#add_executable(C_Clion C_demo1/C_Test13.c)

#C_demo2
#add_executable(C_Clion C_demo2/C_Test01.c)
#add_executable(C_Clion C_demo2/C_Test02.c)
#add_executable(C_Clion C_demo2/C_Test03.c)
#add_executable(C_Clion C_demo2/C_Test04.c)
#add_executable(C_Clion C_demo2/C_Test05.c)
#add_executable(C_Clion C_demo2/C_Test06.c)
#add_executable(C_Clion C_demo2/C_Test07.c)
#add_executable(C_Clion C_demo2/C_Test08.c)
#add_executable(C_Clion C_demo2/C_Test09.c)
#add_executable(C_Clion C_demo2/C_Test10.c)
#add_executable(C_Clion C_demo2/C_Test11.c)
#add_executable(C_Clion C_demo2/C_Test12.c)
#add_executable(C_Clion C_demo2/C_Test13.c)

#C_demo3
#add_executable(C_Clion C_demo3/C_Test01.c)
#add_executable(C_Clion C_demo3/C_Test02.c)
#add_executable(C_Clion C_demo3/C_Test03.c)
#add_executable(C_Clion C_demo3/C_Test04.c)
#add_executable(C_Clion C_demo3/C_Test05.c)
#add_executable(C_Clion C_demo3/C_Test06.c)
#add_executable(C_Clion C_demo3/C_Test07.c)
#add_executable(C_Clion C_demo3/C_Test08.c)
#add_executable(C_Clion C_demo3/C_Test09.c)
#add_executable(C_Clion C_demo3/C_Test10.c)

#C_demo4
#add_executable(C_Clion C_demo4/C_Test01.c)
#add_executable(C_Clion C_demo4/C_Test02.c)
#add_executable(C_Clion C_demo4/C_Test03.c)
#add_executable(C_Clion C_demo4/C_Test04.c)
#add_executable(C_Clion C_demo4/C_Test05.c)
#add_executable(C_Clion C_demo4/C_Test06.c)
#add_executable(C_Clion C_demo4/C_Test07.c)
#add_executable(C_Clion C_demo4/C_Test08.c)
#add_executable(C_Clion C_demo4/C_Test09.c)
#add_executable(C_Clion C_demo4/C_Test10.c)
#add_executable(C_Clion C_demo4/C_Test11.c)
#add_executable(C_Clion C_demo4/C_Test12.c)
#add_executable(C_Clion C_demo4/C_Test13.c)
#add_executable(C_Clion C_demo4/C_Test14.c)
#add_executable(C_Clion C_demo4/C_Test15.c)
#add_executable(C_Clion C_demo4/C_Test16.c)
#add_executable(C_Clion C_demo4/C_Test17.c)
#add_executable(C_Clion C_demo4/C_Test18.c)
#add_executable(C_Clion C_demo4/C_Test19.c)

#C_demo5
#add_executable(C_Clion C_demo5/C_Test01.c)
#add_executable(C_Clion C_demo5/C_Test02.c)
#add_executable(C_Clion C_demo5/C_Test03.c)
#add_executable(C_Clion C_demo5/C_Test04.c)

#C_demo6
add_executable(C_Clion C_demo6/C_Test01.c)